--- a/TODO
+++ b/TODO
@@ -1,7 +1,11 @@
 Being able to change user
-Finish to code list_users
+list_users and list_projects -> print which user/project is active
+	gcloud config get-value project
+	gcloud auth list -> *
 remove launch and command_lines from main.py
+add a --list parameter witch accept a list of project_id if you don't want to scan all project
 add a try except for ctrl+c
+
 
 make requirement file
 	dns.googleapis.com
@@ -18,4 +22,3 @@ Need to do some research (easy) :
 
 Later, need some reasearch (hard) :
 	gce_firewallrule_traffic -> use loadbalancer pas en frontal
-
