--- a/TODO
+++ b/TODO
@@ -1,24 +1,32 @@
-Being able to change user
-list_users and list_projects -> print which user/project is active
-	gcloud config get-value project
-	gcloud auth list -> *
 remove launch and command_lines from main.py
 add a --list parameter witch accept a list of project_id if you don't want to scan all project
-add a try except for ctrl+c
-
+print the criticity
+make the count of vulns ? a table or just printing it at the end of the scan
+add timing of the scan
 
 make requirement file
 	dns.googleapis.com
-make markdown file for github
 
 add more security check
+	gcloud compute firewall-rules list --format=json -> if logConfig == false -> gce_firewallrule_log -> Medium
+	gcloud compute instances list -> if external IP -> gce_instance_externalip -> Major
+	gcloud compute instances list -> if not europe -> gce_instance_location -> Major
+	gcloud compute instances list- > gcloud compute instances describe NAME --zone=ZONE -> yaml -> email: -> if email [0-9]*-compute@developer.gserviceaccount.com -> gce_instance_service_account -> Major
+	gcloud compute instances list- > gcloud compute instances describe NAME --zone=ZONE -> yaml -> canIpForward: -> if true -> gce_ip_forwarding -> Critical
+	gcloud compute instances list- > gcloud compute instances describe NAME --zone=ZONE -> yaml -> network: -> .split('/')[-1] == default -> gce_network_name -> Major
+	gcloud compute instances list- > gcloud compute instances describe NAME --zone=ZONE -> yaml ->  enableIntegrityMonitoring:
+  	enableSecureBoot:  enableVtpm: -> all true or -> gce_shielded_instances -> Minor
 
-
-gcloud compute disks list -> if "europe-" not in location -> gce_disk_location -> Major
-gcloud compute firewall-rules list --format=json -> if logConfig == false -> gce_firewallrule_log -> Medium
 
 Need to do some research (easy) : 
 	gce_instance_location -> Major
+	gce_target_https_proxy_ssl_policy
+	gce_target_ssl_proxy_ssl_policy
 
 Later, need some reasearch (hard) :
 	gce_firewallrule_traffic -> use loadbalancer pas en frontal
+	gce_router_nat_log
+
+	Try to catch error in threads
+	Being able to change user ? -> gcloud config set account
+
