--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 In priority :
-	?
-
-Report :
-	html/pdf ?
+	html report add an errors details/summary
+	translate functions_name as name thanks to dictionnary
+	add css to the html report
+	add number of results after Result in template in ()
+	sort by severity
+	add a summary at the beginning of the report which is the sum of non compliance of each scan
 
 
 Need to do some research (easy) :
